# pds-test-api-call

./: .gitignore  CMakeLists.txt  README.md  compile.sh  install_dependencies.sh
lib/: CMakeLists.txt
lib/loguru/: CMakeLists.txt
lib/nlohmann/: CMakeLists.txt
src/: Main.cpp
src/ApiHandler/: ApiErrorException.h  ApiHandler.cpp  ApiHandler.h
src/requests/: Request.cpp  Request.h
src/requests/todo/: ReqCreateTodo.hpp
src/responses/: ErrorResponse.hpp  Response.cpp  Response.h
src/responses/todo/: RespMultipleTodos.hpp  RespOneTodo.hpp
